See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.37.0

              pnmrotate: fix -background option with PGM/PBM input.

              pnmshear: add -background.  Thanks Erik Auerswald
              <auerswal@unix-ag.uni-kl.de>.

              pamx: fix bug with X depth = 0.

              pamx: fix bug: incorrect display of one-plane input image.

              libnetpbm: add pnm_computetuplefreqtable3().  Has ability
              to limit number of planes of input considered.

              libnetpbm: fix bogus results from ppm_parsecolor() of
              rgb:0/0/0 style color name.

              ppmtogif: replace with pamtogif.  Fix garbage output with
              -interlace.

              Build: fix Darwin build.

              Configure: fix default for X library location.

              Build: remove unnecessary limit of 200 characters on
              argument length in Libopt.

              pbmtoxbm: add -name option.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              
              xbmtopbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm, pbmtox10bm: merge.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtox10bm: Fix generation of name in XBM file.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmnlfilt: Give proper error message for syntax errors.

              pnm_readpaminit(): abort instead of crash if width == 0.

              ppmtompeg: fix reading of GOPs.  Thanks Alun Jones.

              cmuwmtopbm, mgrtopbm, pbmtocmuwm, pbmtoicon, pbmtomgr:
              Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
